# staunch

./: LICENSE  Makefile.am  README.md  configure.ac
docs/: staunch.8  stauncher.8
packaging/: staunch.spec
src/: Makefile  Makefile.am  itoa.c  itoa.h  staunch-common.c  staunch-common.h  staunch-data.c  staunch-data.h  staunch-launch.c  staunch-manage.c  staunch-messages.c  staunch-messages.h  staunch-read.c  staunch-read.h  staunch-write.c  staunch-write.h  staunch.c  stauncher.c
